initial layout app header

--- a/assets/style/cmps/AppHeader.css
+++ b/assets/style/cmps/AppHeader.css
@@ -7,6 +7,6 @@
 @media(max-width: 720px) {
   .app-header {
     background-color: var(--clr3);
-    color: var(--secondary-clr2);
+    color: var(--clr5);
   }
 }
