--- a/assets/style/base/base.css
+++ b/assets/style/base/base.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: roboto
 }
 
 html {
@@ -18,7 +19,7 @@ h4,
 h5,
 h6 {
   margin: 0 0 1em;
-  font-family: 'Edu VIC WA NT Beginner', cursive;
+  font-family: roboto;
 }
 
 p {
