--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -12,6 +12,7 @@
 @import 'cmps/HomePage.css';
 @import 'cmps/AppHeader.css';
 @import 'cmps/UserMsg.css';
+@import 'cmps/AppIndex.css';
 
 /* Apps */
 @import 'apps/mail/EmailIndex.css';
