--- a/assets/style/setup/vars.css
+++ b/assets/style/setup/vars.css
@@ -5,8 +5,10 @@
   --clr4: rgb(96, 96, 96);
   --clr5: rgb(0, 0, 0);
 
+  --clrbg: rgb(246 248 251);
+  --clrbg2: rgb(246 248 251);
 
   --secondary-clr1: rgb(88, 201, 58);
   --secondary-clr2: rgb(122, 7, 70);
 
-} 
+}
