bug UX fix, still not working as it should

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -16,4 +16,9 @@
 
 /* Apps */
 @import 'apps/mail/EmailIndex.css';
-@import 'apps/note/NoteIndex.css';
+@import 'apps/keep/add-note.css';
+@import 'apps/keep/keep-app.css';
+@import 'apps/keep/note-filter.css';
+@import 'apps/keep/note-list.css';
+@import 'apps/keep/note-preview.css';
+
