--- a/assets/style/base/base.css
+++ b/assets/style/base/base.css
@@ -1,18 +1,14 @@
 * {
   box-sizing: border-box;
   font-family: roboto;
-
-  
-
 }
 
-html {
-  
-}
+/* html {} */
 
 body {
   margin: 0;
   color: var(--clr4);
+  max-width: 100vw;
 }
 
 h1,
@@ -55,4 +51,3 @@ button {
 .debug * {
   outline: 1px solid gold
 }
-
