--- a/assets/style/cmps/AppIndexSideBar.css
+++ b/assets/style/cmps/AppIndexSideBar.css
@@ -1,5 +1,5 @@
 /* .app-index .side-bar {} */
-.app-index .side-bar .compose-email {
+.app-index .side-bar .compose-email-btn {
     margin-inline-start: 10px;
     width: 200px;
     height: 50px;
@@ -12,7 +12,11 @@
     cursor: pointer;
 }
 
-.app-index .side-bar .compose-email .icon-pencil {
+.app-index .side-bar .compose-email-btn:hover {
+    box-shadow: 0px 0px 5px 0px var(--clr3);
+}
+
+.app-index .side-bar .compose-email-btn .icon-pencil {
     height: 1rem;
     object-fit: contain;
     padding-inline: 20px;
@@ -35,6 +39,8 @@
     place-items: center;
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
+
+    cursor: pointer;
 }
 
 .app-index .side-bar ul li:first-child {
