--- a/assets/style/setup/vars.css
+++ b/assets/style/setup/vars.css
@@ -9,6 +9,8 @@
   --clrbg-input: rgb(235 241 250);
   --clrbg-folders: rgb(214 226 251);
   --clrbg-compose: rgb(201 230 252);
+  --clrbg-border: rgb(226 231 237);
+  --clr-btn: rgb(19 77 218);
 
   --secondary-clr1: rgb(88, 201, 58);
   --secondary-clr2: rgb(122, 7, 70);
