--- a/assets/style/setup/vars.css
+++ b/assets/style/setup/vars.css
@@ -10,6 +10,9 @@
   --clrbg-folders: rgb(214 226 251);
   --clrbg-compose: rgb(201 230 252);
   --clrbg-border: rgb(226 231 237);
+  --clrbg-prev-read:rgb(226 231 237);
+  --clrbg-btn1: rgb(232 234 239);
+  --clrbg-btn2:rgb(242 242 241);
   --clr-btn: rgb(19 77 218);
 
   --secondary-clr1: rgb(88, 201, 58);
