--- a/assets/style/apps/mail/EmailList.css
+++ b/assets/style/apps/mail/EmailList.css
@@ -4,8 +4,22 @@
     height: calc(100vh - 64px);
 }
 
-.app-index .email-sort {
+.app-index .email-list .emails-sort {
     height: 42px;
+    margin-inline:10px;
+    gap:10px
+}
+
+.app-index .email-list .emails-sort button {
+    border-radius:5px;
+    border:none;
+    background-color: var(--clr1);
+}
+
+.app-index .email-list .emails-sort button.selected {
+    border-radius:5px;
+    border:none;
+    background-color: var(--clrbg-btn1);
 }
 
 .app-index .email-list ul {
@@ -14,5 +28,5 @@
     padding: 0;
     font-size: 14px;
 
-    margin-block-start: 42px;
+    /* margin-block-start: 42px; */
 }
