connected books app, with list details and edit working

--- a/assets/style/cmps/UserMsg.css
+++ b/assets/style/cmps/UserMsg.css
@@ -1,7 +1,7 @@
 .user-msg {
     position: fixed;
-    top: 40px;
-    right: 20px;
+    bottom: 40px;
+    left: 20px;
 
     width: 290px;
     background-color: rgb(208, 206, 139);
@@ -9,9 +9,12 @@
     border-radius: 5px;
     /* transition: opacity 1s; */
 }
+
 .success {
-    background-color: var(--clrbg-compose);
+    background-color: var( --clr4-5);
+    color: var(--clr1);
 }
+
 .error {
     background-color: rgb(187, 104, 104);
 }
