--- a/assets/style/cmps/AppHeader.css
+++ b/assets/style/cmps/AppHeader.css
@@ -1,7 +1,13 @@
 .app-header {
-  background-color: var(--clr5);
-  color: var(--secondary-clr1);
-  padding: 1em;
+  background-color: var(--clrbg-compose);
+  color: var(--clr4-5);
+  padding: 2em;
+}
+
+.app-header h1 {
+  font-family: googlesans;
+  font-size: 2rem;
+  margin:0
 }
 
 @media(max-width: 720px) {
