--- a/assets/style/cmps/AppIndexHeader.css
+++ b/assets/style/cmps/AppIndexHeader.css
@@ -1,15 +1,3 @@
-/* * {
-    background-color: var(--clrbg);
-} */
-/* .app-index {
-    display: grid;
-    grid-template-columns: 255px 1fr;
-    grid-template-rows: 64px 1fr;
-} */
-.app-index{
-    background-color: var(--clrbg);
-   
-}
 .app-index .header {
     background-color: transparent;
     /* grid-row: 1;
@@ -27,6 +15,10 @@
     font-size: 1.4rem;
 }
 
+.app-index .header .logo span {
+    font-family: googlesans;
+}
+
 .app-index .header img {
     width: 2rem;
     object-fit: contain;
@@ -38,10 +30,11 @@
     border: none;
     margin-block: 7px;
 }
+
 .app-index .header .input svg {
     color: var(--clr4);
     margin-inline-start: 1.5rem;
-    height:1rem;
+    height: 1rem;
     object-fit: contain;
 }
 
@@ -51,13 +44,64 @@
     border: none;
 }
 
-.app-index .header .action-buttons{
+.app-index .header .action-buttons {
     justify-self: end;
+    justify-content: space-evenly;
+    width: 100px;
 }
 
-.app-index .header .action-buttons > * {
+.app-index .header .action-buttons button {
     background-color: transparent;
     border: none;
+    border-radius: 50%;
     cursor: pointer;
-    padding: 0;
+    padding: 12px;
+    width: 40px;
+    height: 40px;
+
+    margin: 0;
+}
+
+.app-index .header .action-buttons button img {
+    width: 1rem;
+    object-fit: contain;
+}
+.app-index .header .action-buttons a img {
+    width:20px;
+    aspect-ratio: 1;
+}
+
+.app-index .header .action-buttons button:hover {
+    background-color: var(--clrbg-btn1);
+}
+
+.app-index .header .mini-menu {
+    position: absolute;
+    top: 4rem;
+    right: 1rem;
+
+    width: 300px;
+    height: 120px;
+
+    justify-content: space-evenly;
+
+    background-color: var(--clr1);
+    box-shadow: 0px 0px 3px 0px var(--clr4);
+    border-radius: 10px;
+
+    color: var(--clr5);
+    font-size: 14px;
+}
+
+.app-index .header .mini-menu a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+}
+
+.app-index .header .mini-menu img {
+    width: 35px;
+    object-fit: contain;
 }
