--- a/assets/style/cmps/HomePage.css
+++ b/assets/style/cmps/HomePage.css
@@ -1,17 +1,48 @@
-.link-group {
-    margin: auto;
-    gap:50px;
-    width:fit-content;
+.home-page {
+    height: calc(100vh - 102.5px - 40px);
+    color:var(--clr5)
 }
 
-.link-group img {
-    width:200px;
-    object-fit: contain;
-    cursor: pointer;
+.home-page h1 {
+    margin:0;
+    padding-block-start: 2rem;
+    font-size:40px;
+    text-align: center;
+}
 
+.home-page h2 {
+    text-align: center;
+    color: var(--clr4);
+    font-weight: normal;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    margin: 0;
+    margin-block-start: 20px;
+    margin-block-end: 40px;
+}
+
+.home-page .link-group {
+    margin: auto;
+    gap: 90px;
+    width: fit-content;
+}
+
+.home-page .link-group a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
     transition: scale ease-in-out 0.2s;
 }
 
-.link-group img:hover {
-    scale:1.3;
+
+.home-page .link-group img {
+    width: 120px;
+    object-fit: contain;
+    cursor: pointer;
+
+}
+
+.home-page .link-group a:hover {
+    scale: 1.2;
 }
