--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -13,6 +13,7 @@
 @import 'cmps/AppHeader.css';
 @import 'cmps/AppFooter.css';
 @import 'cmps/UserMsg.css';
+@import 'cmps/About.css';
 
 /* Apps */
 @import 'apps/mail/EmailIndex.css';
